Kubernetes/k8s-manifests-v5/clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-clusterip
  namespace: day33-advanced
spec:
  type: ClusterIP
  selector:
    app: nginx-advanced
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
