Kubernetes/k8s-manifests-v5/networkpolicy-example.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-nginx
  namespace: day33-advanced
spec:
  podSelector:
    matchLabels:
      app: nginx-advanced
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              role: frontend
      ports:
        - protocol: TCP
          port: 80
